--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .gradle
+gradle/**
 /build/
 
 # Ignore Gradle GUI config
@@ -12,3 +13,22 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Intellij project files
+*.iml
+*.ipr
+*.iws
+.idea/
+
+out/
+.DS_Store
