--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.apache.spark', name: 'spark-core_2.10', version: '1.6.2'
+    compile group: 'org.apache.spark', name: 'spark-streaming_2.10', version: '1.6.2'
+    compile group: 'org.apache.spark', name: 'spark-sql_2.10', version: '2.2.0'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
