--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -47,6 +47,32 @@ services:
       - "SPARK_MASTER=spark://spark-master:7077"
       - "constraint:node==spark-master"
 
+  spark-worker-2:
+    image: bde2020/spark-worker:2.2.0-hadoop2.7
+    container_name: spark-worker-2
+#    deploy:
+#      replicas: 2
+    links:
+      - spark-master
+    ports:
+      - "8082:8082"
+    environment:
+      - "SPARK_MASTER=spark://spark-master:7077"
+      - "constraint:node==spark-master"
+
+  spark-worker-3:
+    image: bde2020/spark-worker:2.2.0-hadoop2.7
+    container_name: spark-worker-3
+#    deploy:
+#      replicas: 2
+    links:
+      - spark-master
+    ports:
+      - "8083:8083"
+    environment:
+      - "SPARK_MASTER=spark://spark-master:7077"
+      - "constraint:node==spark-master"
+
   spark-batchjob-1:
     image: java:8-jre
 #    restart: on-failure
