--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,6 +2,12 @@ version : '3.1'
 
 services:
 
+  cassandra:
+    container_name: cassandra
+    image: "cassandra:3.0.12"
+    ports:
+      - "9042:9042"
+
   postgres:
     image: "postgres:9.6.5"
     container_name: "postgres"
