--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ dependencies {
     compile group: 'org.apache.spark', name: 'spark-sql_2.10', version: '2.2.0'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
 
+    compile("org.apache.commons:commons-csv:1.1",
+        "org.projectlombok:lombok:1.16.8")
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
