--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -36,13 +36,39 @@ services:
 
   spark-worker:
     image: bde2020/spark-worker:2.2.0-hadoop2.7
-    container_name: spark-worker
+    container_name: spark-worker1
 #    deploy:
 #      replicas: 2
     links:
       - spark-master
     ports:
       - "8081:8081"
+    environment:
+      - "SPARK_MASTER=spark://spark-master:7077"
+      - "constraint:node==spark-master"
+
+  spark-worker1:
+    image: bde2020/spark-worker:2.2.0-hadoop2.7
+    container_name: spark-worker2
+#    deploy:
+#      replicas: 2
+    links:
+      - spark-master
+    ports:
+      - "8082:8082"
+    environment:
+      - "SPARK_MASTER=spark://spark-master:7077"
+      - "constraint:node==spark-master"
+
+  spark-worker2:
+    image: bde2020/spark-worker:2.2.0-hadoop2.7
+    container_name: spark-worker3
+#    deploy:
+#      replicas: 2
+    links:
+      - spark-master
+    ports:
+      - "8083:8083"
     environment:
       - "SPARK_MASTER=spark://spark-master:7077"
       - "constraint:node==spark-master"
