Pooja/Pallavi - Saving cassandra volume

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,8 @@ services:
   cassandra:
     container_name: cassandra
     image: "cassandra:3.0.12"
+    volumes:
+          - ./cassandra_data:/var/lib/cassandra
     ports:
       - "9042:9042"
 
