--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    compile 'org.projectlombok:lombok:1.16.10'
     compile group: 'org.apache.spark', name: 'spark-core_2.11', version: '2.2.0'
     compile group: 'org.apache.spark', name: 'spark-streaming_2.11', version: '2.2.0'
     compile group: 'org.apache.spark', name: 'spark-sql_2.11', version: '2.2.0'
